# embassy-stm32u5-uart-dma-error

./: Cargo.toml  Embed.toml  README.md  build.rs  flake.nix
.cargo/: config.toml
src/: main.rs
